created timeblocks for 7am-7pm in html. added footer

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
   <title>Work Day Scheduler</title>
 </head>
 
@@ -21,9 +21,86 @@
     <p id="currentDay" class="lead"></p>
   </header>
   
+  <!-- Timeblocks -->
   <div class="container">
-    <!-- Timeblocks go here -->
+    <!-- 7AM -->
+    <div class="row time-block" id="7">
+      <div class="col-1 hour pt-2">07:00</div>
+      <textarea class="col-10 plan"></textarea>
+      <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+    </div>
+    <!-- 8AM -->
+    <div class="row time-block" id="8">
+      <div class="col-1 hour pt-2">08:00</div>
+      <textarea class="col-10 plan"></textarea>
+      <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+    </div>
+    <!-- 9AM -->
+    <div class="row time-block" id="9">
+      <div class="col-1 hour pt-2">09:00</div>
+      <textarea class="col-10 plan"></textarea>
+      <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+    </div>
+    <!-- 10AM -->
+    <div class="row time-block" id="10">
+      <div class="col-1 hour pt-2">10:00</div>
+      <textarea class="col-10 plan"></textarea>
+      <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+    </div>
+    <!-- 11AM -->
+    <div class="row time-block" id="11">
+      <div class="col-1 hour pt-2">11:00</div>
+      <textarea class="col-10 plan"></textarea>
+      <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+    </div>
+    <!-- 12PM -->
+    <div class="row time-block" id="12">
+      <div class="col-1 hour pt-2">12:00</div>
+      <textarea class="col-10 plan"></textarea>
+      <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+    </div>
+    <!-- 1PM -->
+    <div class="row time-block" id="13">
+      <div class="col-1 hour pt-2">13:00</div>
+      <textarea class="col-10 plan"></textarea>
+      <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+    </div>
+    <!-- 2PM -->
+    <div class="row time-block" id="14">
+      <div class="col-1 hour pt-2">14:00</div>
+      <textarea class="col-10 plan"></textarea>
+      <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+    </div>
+    <!-- 3PM -->
+    <div class="row time-block" id="15">
+      <div class="col-1 hour pt-2">15:00</div>
+      <textarea class="col-10 plan"></textarea>
+      <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+    </div>
+    <!-- 4PM -->
+    <div class="row time-block" id="16">
+      <div class="col-1 hour pt-2">16:00</div>
+      <textarea class="col-10 plan"></textarea>
+      <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+    </div>
+    <!-- 5PM -->
+    <div class="row time-block" id="17">
+      <div class="col-1 hour pt-2">17:00</div>
+      <textarea class="col-10 plan"></textarea>
+      <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+    </div>
+    <!-- 6PM -->
+    <div class="row time-block" id="18">
+      <div class="col-1 hour pt-2">18:00</div>
+      <textarea class="col-10 plan"></textarea>
+      <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+    </div>
+
   </div>
+
+  <footer>
+    
+  </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
