--- a/index.html
+++ b/index.html
@@ -16,10 +16,18 @@
 
 <body>
   <header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary custom-nav">
+      <div class="container-fluid">
+          <a href="#"><img src="./assets/images/logo-gold-no-fill.png" height="55px;" width="60px;"></a>
+      </div>
+    </nav>
+  </header>
+
+  <section class="title">
     <h1 class="display-3">Work Day Scheduler</h1>
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
-  </header>
+  </section>
   
   <!-- Timeblocks -->
   <div class="container">
@@ -99,7 +107,8 @@
   </div>
 
   <footer>
-    
+    <h6>By Lianna Thomas-Forbes</h6>
+    <p>&copy; 2024 The TF Group, Ltd.</p>
   </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
