--- a/index.html
+++ b/index.html
@@ -18,15 +18,19 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary custom-nav">
       <div class="container-fluid">
-          <a href="#"><img src="./assets/images/logo-gold-no-fill.png" height="55px;" width="60px;"></a>
+          <a href="#"><img src="./assets/images/logo-gold-fill.png" height="55px;" width="60px;"></a>
       </div>
     </nav>
   </header>
 
-  <section class="title">
-    <h1 class="display-3">Work Day Scheduler</h1>
-    <p class="lead">A simple calendar app for scheduling your work day</p>
-    <p id="currentDay" class="lead"></p>
+  <section>
+    <div class="jumbotron py-5">
+      <div class="jumbotron-container text-center">
+        <h1 class="display-3">Work Day Scheduler</h1>
+        <p class="lead">A simple calendar app for scheduling your work day</p>
+        <p id="currentDay" class="lead"></p>
+      </div>
+    </div>
   </section>
   
   <!-- Timeblocks -->
