added delete buttons

--- a/index.html
+++ b/index.html
@@ -39,74 +39,86 @@
     <!-- 7AM -->
     <div class="row time-block" id="7">
       <div class="col-1 hour pt-2">07:00</div>
-      <textarea class="col-10 plan"></textarea>
+      <textarea class="col-9 plan"></textarea>
       <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      <button class="col-1 deleteBtn"><i class="fas fa-trash"></i></button>
     </div>
     <!-- 8AM -->
     <div class="row time-block" id="8">
       <div class="col-1 hour pt-2">08:00</div>
-      <textarea class="col-10 plan"></textarea>
+      <textarea class="col-9 plan"></textarea>
       <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      <button class="col-1 deleteBtn"><i class="fas fa-trash"></i></button>
     </div>
     <!-- 9AM -->
     <div class="row time-block" id="9">
       <div class="col-1 hour pt-2">09:00</div>
-      <textarea class="col-10 plan"></textarea>
+      <textarea class="col-9 plan"></textarea>
       <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      <button class="col-1 deleteBtn"><i class="fas fa-trash"></i></button>
     </div>
     <!-- 10AM -->
     <div class="row time-block" id="10">
       <div class="col-1 hour pt-2">10:00</div>
-      <textarea class="col-10 plan"></textarea>
+      <textarea class="col-9 plan"></textarea>
       <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      <button class="col-1 deleteBtn"><i class="fas fa-trash"></i></button>
     </div>
     <!-- 11AM -->
     <div class="row time-block" id="11">
       <div class="col-1 hour pt-2">11:00</div>
-      <textarea class="col-10 plan"></textarea>
+      <textarea class="col-9 plan"></textarea>
       <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      <button class="col-1 deleteBtn"><i class="fas fa-trash"></i></button>
     </div>
     <!-- 12PM -->
     <div class="row time-block" id="12">
       <div class="col-1 hour pt-2">12:00</div>
-      <textarea class="col-10 plan"></textarea>
+      <textarea class="col-9 plan"></textarea>
       <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      <button class="col-1 deleteBtn"><i class="fas fa-trash"></i></button>
     </div>
     <!-- 1PM -->
     <div class="row time-block" id="13">
       <div class="col-1 hour pt-2">13:00</div>
-      <textarea class="col-10 plan"></textarea>
+      <textarea class="col-9 plan"></textarea>
       <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      <button class="col-1 deleteBtn"><i class="fas fa-trash"></i></button>
     </div>
     <!-- 2PM -->
     <div class="row time-block" id="14">
       <div class="col-1 hour pt-2">14:00</div>
-      <textarea class="col-10 plan"></textarea>
+      <textarea class="col-9 plan"></textarea>
       <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      <button class="col-1 deleteBtn"><i class="fas fa-trash"></i></button>
     </div>
     <!-- 3PM -->
     <div class="row time-block" id="15">
       <div class="col-1 hour pt-2">15:00</div>
-      <textarea class="col-10 plan"></textarea>
+      <textarea class="col-9 plan"></textarea>
       <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      <button class="col-1 deleteBtn"><i class="fas fa-trash"></i></button>
     </div>
     <!-- 4PM -->
     <div class="row time-block" id="16">
       <div class="col-1 hour pt-2">16:00</div>
-      <textarea class="col-10 plan"></textarea>
+      <textarea class="col-9 plan"></textarea>
       <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      <button class="col-1 deleteBtn"><i class="fas fa-trash"></i></button>
     </div>
     <!-- 5PM -->
     <div class="row time-block" id="17">
       <div class="col-1 hour pt-2">17:00</div>
-      <textarea class="col-10 plan"></textarea>
+      <textarea class="col-9 plan"></textarea>
       <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      <button class="col-1 deleteBtn"><i class="fas fa-trash"></i></button>
     </div>
     <!-- 6PM -->
     <div class="row time-block" id="18">
       <div class="col-1 hour pt-2">18:00</div>
-      <textarea class="col-10 plan"></textarea>
+      <textarea class="col-9 plan"></textarea>
       <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      <button class="col-1 deleteBtn"><i class="fas fa-trash"></i></button>
     </div>
 
   </div>
