--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="jumbotron py-5">
       <div class="jumbotron-container text-center">
         <h1 class="display-3">Work Day Scheduler</h1>
-        <p class="lead">A simple calendar app for scheduling your work day</p>
+        <h2 class="lead">A simple calendar app for scheduling your work day</h2>
         <p id="currentDay" class="lead"></p>
         <p id="currentTime" class="lead"></p>
       </div>
@@ -116,7 +116,7 @@
   </div>
 
   <footer>
-    <div class="container-fluid">
+    <div class="logo container-fluid">
       <a href="#"><img src="./assets/images/logo-gold-fill.png" height="55px;" width="60px;"></a>
     </div>
     <p class="footerText">&copy; 2024 The TF Group, Ltd.</p>
